fdo#36635 Added WMV/WMA/AAC to list of Movie and Sound File Types

WMV, WMA and AAC are all supported but were not listed in movie and sound
file types (Insert -> Movie and Sound...) so they would not appear in
file browser unless you chose "Show All Files". Added these to list

	modified:   avmedia/source/viewer/mediawindow.cxx

Change-Id: I459b41a1ca647d7a90cec75436438097df5df962
Reviewed-on: https://gerrit.libreoffice.org/2287
Reviewed-by: Andras Timar <atimar@suse.com>
Tested-by: Andras Timar <atimar@suse.com>